# reusable-pipes

./: .gitignore  CHANGELOG.md  README.md
app/: .coverage  .coveragerc  Makefile  main.py  pyproject.toml  pytest.ini  setup.cfg
app/adapters/clients/: argocd_client.py  github_client.py
app/adapters/repositories/: pashfile_repository.py
app/core/application/: build_image_use_case.py  cover_use_case.py  fmt_use_case.py  install_use_case.py  lint_use_case.py  parse_pashfile_use_case.py  push_image_use_case.py  resolve_app_names_use_case.py  sync_argocd_use_case.py  test_use_case.py  update_image_tag_use_case.py  update_release_target_use_case.py  validate_use_case.py
app/core/domain/models/: pash_app_model.py
app/infra/init/: cli_init.py  ioc_init.py
app/infra/tools/: config_tool.py  logger_tool.py
app/interfaces/adapters/clients/: i_argocd_client.py  i_github_client.py
app/interfaces/adapters/repositories/: i_pashfile_repository.py
app/interfaces/core/application/: i_build_image_use_case.py  i_cover_use_case.py  i_fmt_use_case.py  i_install_use_case.py  i_lint_use_case.py  i_parse_pashfile_use_case.py  i_push_image_use_case.py  i_resolve_app_names_use_case.py  i_sync_argocd_use_case.py  i_test_use_case.py  i_update_image_tag_use_case.py  i_update_release_target_use_case.py  i_validate_use_case.py
app/interfaces/infra/tools/: i_config_tool.py  i_logger_tool.py
app/pash_pipe.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
app/tests/unit/adapters/clients/: argocd_client_test.py  (+3 more)
app/tests/unit/infra/: __init__.py
(+29 files in other folders)
