[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pash-pipe"
version = "0.1.0"
description = "CLI de pipelines reutilizáveis da plataforma Pash"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "requests>=2.31",
]

[project.scripts]
pash-pipe = "main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["adapters*", "core*", "infra*", "interfaces*"]
