[metadata]
name = pash-pipe
version = 0.1.0
description = CLI de pipelines reutilizáveis da plataforma Pash

[options]
python_requires = >=3.11
install_requires =
    click>=8.1
    pyyaml>=6.0
    requests>=2.31
    pytest-mock>=3.12
packages = find:

[options.packages.find]
where = .
include =
    adapters*
    core*
    infra*
    interfaces*

[options.entry_points]
console_scripts =
    pash-pipe = main:cli
